--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -1,4 +1,6 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css");
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css");
+
 
 .calendar-container {
     width: 800px;
@@ -6,7 +8,7 @@
     padding: 20px 20px;
     background-color: #f5f5f7;
     border-radius: 8px;
-    font-family: 'Pretendard', sans-serif;
+    font-family: 'Pretendard Variable', sans-serif;
     overflow: hidden;
     box-shadow: 0 0 10px 0 rgba(0,0,0,0.1);
 }
