--- a/src/components/OT/OT.css
+++ b/src/components/OT/OT.css
@@ -13,7 +13,7 @@
 .ot-content {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 10px;
+    padding: 0 5px;
     position: relative;
     z-index: 1;
 }
