--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,18 +1,30 @@
 .footer {
-    width: 100vw;
-    height: 160px;
+    position: relative;
+    width: 100%;
+    height: 80px;
     background-color: #49454F;
+    z-index: 95;
+}
+
+.footer::before {
+    content: '';
+    position: absolute;
+    top: 0;
     left: 50%;
     right: 50%;
     margin-left: -50vw;
     margin-right: -50vw;
-    position: relative;
-    z-index: 95;
+    width: 100vw;
+    height: 100%;
+    background-color: #49454F;
+    z-index: -1;
 }
 
 .footer-content {
+    position: relative;
     max-width: 1200px;
     margin: 0 auto;
     height: 100%;
     padding: 0;
+    z-index: 1;
 } 
